monticore-generator/src/test/resources/cocos/invalid/A4090/A4090f.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A4090;

grammar A4090f extends mc.grammars.types.TestTypes{

  A = "a";
  B = (who:Name | who:A)*;

}
